--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ aquamarine = "0.6"
 thiserror = "2.0.18"
 env_logger = "0.11.9"
 log = "0.4.29"
-postcard = { version = "1.1.3", features = ["alloc"] }
+postcard = { version = "1.1.3" }
+crc-fast = "1.10.0"
+sha2 = "0.10.9"
 
 [dev-dependencies]
