--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ env_logger = "0.11.9"
 log = "0.4.29"
 postcard = { version = "1.1.3" }
 crc-fast = "1.10.0"
-sha2 = "0.10.9"
+blake3 = "1.5"
 flate2 = "1.1.9"
 
 [dev-dependencies]
